ensured layout switches to 1 column on small devices, fixed missing layout-section class on section

--- a/components/layouts.css
+++ b/components/layouts.css
@@ -1,6 +1,6 @@
 .layout-section {
   padding-bottom: 200px;
-  /* scroll-margin-top: -100px; */
+  scroll-margin-top: 20px;
 }
 
 .layout-section-title {
